--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>vue-webpack</title>
   </head>
   <body>
-    <app></app>
+    <app cloak></app>
     <!-- built files will be auto injected -->
   </body>
 </html>
