--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-webpack</title>
+    <title>vue-admin</title>
   </head>
   <body>
-
     <app cloak></app>
     <!-- built files will be auto injected -->
   </body>
