--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
     <title>vue-admin</title>
   </head>
-  <body class="p1">
-    <div id="app" cloak>
-
-    </div>
+  <body>
+    <div id="app" cloak></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
