Add sortable - oh yeah!

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>vue-admin</title>
   </head>
   <body>
+  <script src="http://cdn.jsdelivr.net/sortable/1.4.2/Sortable.min.js"></script>
     <div id="app" cloak></div>
     <!-- built files will be auto injected -->
   </body>
