--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-admin</title>
+    <title>vue-upload</title>
   </head>
   <body>
     <div id="app" cloak></div>
