--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="./assets/logo.png" type="image/x-icon">
     <title>vue-upload</title>
   </head>
   <body>
